Fix project card on safari (#73)

--- a/src/layout/components/ProjectCard/style.scss
+++ b/src/layout/components/ProjectCard/style.scss
@@ -21,6 +21,7 @@
   }
 
   &-photo {
+    height: min(10rem, 15vw);
     object-fit: cover;
   }
 
